unix/lang/tests/error/explicit_error.yab
#expect#---Error: explicit error
#expect#---Error: Program stopped due to an error
error "explicit error"
